added and updated `WildcardQueryTest`